# euler

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  requirements.txt  setup.cfg
euler/: CMakeLists.txt  __init__.py
euler/client/: CMakeLists.txt  client_manager.cc  client_manager.h  completion_queue_pool.h  end2end_gp_test.cc  end2end_local_test.cc  end2end_test.cc  graph.cc  graph.h  graph_config.cc  graph_config.h  graph_test.cc  grpc_channel.cc  grpc_channel.h  grpc_channel_test.cc  grpc_manager.cc  grpc_manager.h  grpc_thread_pool.h  impl_register.h  local_graph.cc  local_graph.h  query.cc  query.h  query_proxy.cc  query_proxy.h  remote_graph.cc  remote_graph.h  remote_graph_shard.cc  remote_graph_shard.h  rpc_client.cc  rpc_client.h  rpc_client_end2end_test.cc  rpc_client_test.cc  rpc_manager.cc  rpc_manager.h  rpc_manager_test.cc  status.cc  status.h
euler/client/testing/: CMakeLists.txt  echo.h  echo.proto  mock_rpc_manager.cc  mock_rpc_manager.h  simple_server_monitor.h
euler/common/: CMakeLists.txt  alias_method.cc  alias_method.h  bytes_compute.h  bytes_io.cc  bytes_io.h  bytes_io_test.cc  bytes_reader.cc  bytes_reader.h  compact_weighted_collection.h  compact_weighted_collection_test.cc  data_types.cc  data_types.h  data_types_test.cc  env.cc  env.h  env_posix.cc  env_test.cc  error_code.h  fast_weighted_collection.h  fast_weighted_collection_test.cc  file_io.cc  file_io.h  file_io_factory.cc  file_io_factory.h  hash.cc  hash.h  hdfs_file_io.cc  hdfs_file_io.h  hdfs_file_io_factory.h  hdfs_file_io_test.cc  local_file_io.cc  local_file_io.h  local_file_io_factory.h  local_file_io_test.cc  logging.cc  logging.h  macros.h  mutex.h  net_util.cc  (+32 more)
euler/core/: CMakeLists.txt  compact_edge.cc  compact_edge.h  compact_graph.cc  compact_graph.h  compact_graph_factory.cc  compact_graph_factory.h  compact_node.cc  compact_node.h  edge.cc  edge.h  fast_edge.cc  fast_edge.h  fast_graph.cc  fast_graph.h  fast_graph_factory.cc  fast_graph_factory.h  fast_node.cc  fast_node.h  graph.h  graph_builder.cc  graph_builder.h  graph_engine.cc  graph_engine.h  graph_factory.h  local_graph_test.cc  node.cc  node.h
euler/core/api/: CMakeLists.txt  api.cc  api.h
euler/core/dag/: CMakeLists.txt  dag.cc  dag.h  dag_test.cc  edge.h  node.cc  node.h
euler/core/dag_def/: CMakeLists.txt  dag_def.cc  dag_def.h  dag_def_test.cc  dag_node_def.cc  dag_node_def.h  sub_graph_iso.cc  sub_graph_iso.h
euler/core/framework/: CMakeLists.txt  allocator.cc  allocator.h  attr_value.h  dag.proto  dag_node.proto  executor.cc  executor.h  executor_test.cc  op_kernel.cc  op_kernel.h  tensor.cc  tensor.h  tensor.proto  tensor_shape.h  tensor_shape.proto  tensor_shape_test.cc  tensor_test.cc  tensor_util.cc  tensor_util.h  tensor_util_test.cc  thread_pool.h  types.h  types.proto  udf.cc  udf.h
euler/core/graph/: CMakeLists.txt  edge.cc  edge.h  edge_test.cc  graph.cc  graph.h  graph_builder.cc  graph_builder.h  graph_meta.cc  graph_meta.h  graph_test.cc  local_graph_test.cc  node.cc  node.h  node_test.cc
euler/core/index/: CMakeLists.txt  common_index_result.cc  common_index_result.h  common_index_result_test.cc  hash_index_result.h  hash_index_result_test.cc  hash_range_sample_index.h  hash_range_sample_index_test.cc  hash_sample_index.h  hash_sample_index_test.cc  index_manager.cc  index_manager.h  index_manager_test.cc  index_meta.cc  index_meta.h  index_meta_test.cc  index_result.h  index_types.h  index_util.h  range_index_result.h  range_index_result_test.cc  range_sample_index.h  range_sample_index_test.cc  sample_index.h
euler/core/kernels/: CMakeLists.txt  append_merge_op.cc  append_merge_op_test.cc  as_op.cc  common.cc  (+56 more)
euler/parser/: .gitignore  CMakeLists.txt  attribute_calculator.cc  attribute_calculator.h  compiler.cc  compiler.h  compiler_test.cc  gen_node_def_input_output.cc  gen_node_def_input_output.h  gremlin.l  gremlin.y  optimize_rule.h  optimize_type.cc  optimize_type.h  optimizer.cc  optimizer.h  optimizer_test.cc  translator.cc  translator.h  translator_test.cc  tree.h  tree_test.cc
euler/proto/: CMakeLists.txt  graph_service.proto  service.proto  worker.proto
euler/python/: __init__.py  hash_test.py  service.py  start_service.py
euler/service/: CMakeLists.txt  async_service_interface.h  call_data.cc  call_data.h  graph_service.cc  graph_service.h  grpc_call.h  grpc_euler_service.cc  grpc_euler_service.h  grpc_server.cc  grpc_server.h  grpc_server_test.cc  grpc_worker.cc  grpc_worker.h  grpc_worker_service.cc  grpc_worker_service.h  mock_api.cc  python_api.cc  server_interface.cc  server_interface.h  worker.h
euler/tools/: CMakeLists.txt  __init__.py  __main__.py  edge.py  gen_graph_partition_test_data.sh  gen_partitioned_data.sh  generate_euler_data.py  graph_meta.py  json2dat.py  json2meta.py  json2partdat.py  json2partindex.py  node.py  util.py
euler/util/: CMakeLists.txt  python_api.cc
tf_euler/: CMakeLists.txt  __init__.py  __main__.py
tf_euler/kernels/: gather_op.cc  gen_pair_op.cc  get_binary_feature_op.cc  get_dense_feature_op.cc  get_edge_binary_feature_op.cc  get_edge_dense_feature_op.cc  get_edge_sparse_feature_op.cc  get_full_neighbor_op.cc  get_graph_by_label_op.cc  get_node_type_op.cc  get_sorted_full_neighbor_op.cc  get_sparse_feature_op.cc  get_top_k_neighbor_op.cc  inflate_idx_op.cc  random_walk_op.cc  sample_edge_op.cc  sample_fanout_op.cc  sample_fanout_with_feature_op.cc  sample_graph_label_op.cc  sample_n_with_types_op.cc  sample_neighbor_layerwise_with_adj_op.cc  sample_neighbor_op.cc  sample_node_op.cc  scatter_op.cc  sparse_gather_op.cc  sparse_get_adj_op.cc
tf_euler/ops/: euler_ops.cc  feature_ops.cc  mp_ops.cc  neighbor_ops.cc  sample_ops.cc  type_ops.cc  util_ops.cc  walk_ops.cc
tf_euler/python/: aggregators.py  base_layers.py  encoders.py  layers.py  metrics.py  optimizers.py  ppi_main.py  reddit_main.py  run_loop.py  sparse_aggregators.py
tf_euler/scripts/: dist_tf_euler.sh  run_ppi.sh  start_service.py
tf_euler/utils/: create_graph.cc  euler_query_proxy.h  init_query_proxy.cc  sparse_tensor_builder.h
(+240 files in other folders)
